--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cloudinary": "^1.27.0",
     "firebase": "8.6.7",
+    "formidable": "^1.2.2",
     "next": "11.1.2",
     "next-auth": "^3.29.0",
     "react": "^17.0.2",
